packages/tailwind-config/gruvbox-styles.css
@layer base {
  :root {
    --background: hsl(43 58% 80%);
    --foreground: hsl(21 7% 29%);
    --card: hsl(48 86% 88%);
    --card-foreground: hsl(20 5% 22%);
    --popover: hsl(52 73% 90%);
    --popover-foreground: hsl(21 7% 29%);
    --primary: hsl(189 88% 24%);
    --primary-foreground: hsl(43 58% 80%);
    --secondary: hsl(58 70% 34%);
    --secondary-foreground: hsl(48 86% 88%);
    --muted: hsl(43 58% 80%);
    --muted-foreground: hsl(26 9% 36%);
    --accent: hsl(332 33% 53%);
    --accent-foreground: hsl(20 3% 19%);
    --destructive: hsl(2 75% 45%);
    --destructive-foreground: hsl(52 73% 90%);
    --border: hsl(35 17% 58%);
    --input: hsl(52 73% 90%);
    --ring: hsl(38 100% 50%);

    --font-sans: Source Code Pro, monospace;
    --font-serif: Source Serif 4, serif;
    --font-mono: JetBrains Mono, monospace;

    --radius: 0.5rem;

    --shadow-2xs: 0px 1px 2.5px 0px hsl(35 17% 20% / 0.03);
    --shadow-xs: 0px 1px 2.5px 0px hsl(35 17% 20% / 0.03);
    --shadow-sm: 0px 1px 2.5px 0px hsl(35 17% 20% / 0.06), 0px 1px 2px -1px hsl(35 17% 20% / 0.06);
    --shadow: 0px 1px 2.5px 0px hsl(35 17% 20% / 0.06), 0px 1px 2px -1px hsl(35 17% 20% / 0.06);
    --shadow-md: 0px 1px 2.5px 0px hsl(35 17% 20% / 0.06), 0px 2px 4px -1px hsl(35 17% 20% / 0.06);
    --shadow-lg: 0px 1px 2.5px 0px hsl(35 17% 20% / 0.06), 0px 4px 6px -1px hsl(35 17% 20% / 0.06);
    --shadow-xl: 0px 1px 2.5px 0px hsl(35 17% 20% / 0.06), 0px 8px 10px -1px hsl(35 17% 20% / 0.06);
    --shadow-2xl: 0px 1px 2.5px 0px hsl(35 17% 20% / 0.15);
  }

  html[data-theme="dark"] {
    --background: hsl(195 6% 12%);
    --foreground: hsl(40 38% 73%);
    --card: hsl(20 3% 19%);
    --card-foreground: hsl(48 86% 88%);
    --popover: hsl(0 0% 15%);
    --popover-foreground: hsl(40 38% 73%);
    --primary: hsl(157 15% 58%);
    --primary-foreground: hsl(195 6% 12%);
    --secondary: hsl(59 70% 34%);
    --secondary-foreground: hsl(0 0% 15%);
    --muted: hsl(20 5% 22%);
    --muted-foreground: hsl(38 24% 65%);
    --accent: hsl(332 33% 53%);
    --accent-foreground: hsl(20 3% 19%);
    --destructive: hsl(2 75% 45%);
    --destructive-foreground: hsl(195 6% 12%);
    --border: hsl(21 7% 29%);
    --input: hsl(20 5% 22%);
    --ring: hsl(41 95% 58%);

    --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.01);
    --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.01);
    --shadow-sm: 0px 1px 2px 0px hsl(0 0% 0% / 0.01), 0px 1px 2px -1px hsl(0 0% 0% / 0.01);
    --shadow: 0px 1px 2px 0px hsl(0 0% 0% / 0.01), 0px 1px 2px -1px hsl(0 0% 0% / 0.01);
    --shadow-md: 0px 1px 2px 0px hsl(0 0% 0% / 0.01), 0px 2px 4px -1px hsl(0 0% 0% / 0.01);
    --shadow-lg: 0px 1px 2px 0px hsl(0 0% 0% / 0.01), 0px 4px 6px -1px hsl(0 0% 0% / 0.01);
    --shadow-xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.01), 0px 8px 10px -1px hsl(0 0% 0% / 0.01);
    --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.03);
  }
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);
}

